# ros_motion_planner

./: README.md
bringup/: CMakeLists.txt
bringup/config/: map_display.rviz
bringup/launch/: bringup.launch.xml
motion_planner/: CMakeLists.txt  package.xml
motion_planner/config/: map.rviz  new_config.rviz
motion_planner/launch/: spawn_map.launch.py
motion_planner/src/: obstacle_marker_publisher.cpp  planner.cpp
path_planner/: CMakeLists.txt  package.xml
path_planner/src/: read_grid.cpp
spawn_map/: CMakeLists.txt  package.xml
spawn_map/launch/: spawn_map.launch.py
spawn_map/maps/: test_map.yaml
spawn_map/src/: generate_custom_occupancy_grid.cpp  generate_occupancy_grid.cpp
