<package format="3">
  <name>motion_planner</name>
  <version>1.0.0</version>
  <description>Visualize different motion planning algorithms in RViz</description>
  <maintainer email="harrison.bounds777@gmail.com">Harrison Bounds</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for execution -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
